[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemi/enemi_type_3.gd" type="Script" id=1]
[ext_resource path="res://assets/missile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="enemi" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.678431, 0.996078, 1 )
rotation = 1.5708
scale = Vector2( 0.82, 0.82 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemi",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
